code widget fix

--- a/qdrant-landing/themes/qdrant/layouts/index.html
+++ b/qdrant-landing/themes/qdrant/layouts/index.html
@@ -16,10 +16,8 @@
 
                 <div class="hero-code mt-3 mb-4 copy-btn" id="copy-popover" data-toggle="popover" data-content="Text copied!" data-clipboard-target="#copy-code">
                   <!-- Don't change an alignment inside this code tag-->
-                  <code id="copy-code" class="hero-code__text" title="Copy code">
-docker pull qdrant/qdrant;
-docker run -p 6333:6333 qdrant/qdrant
-                  </code>
+                  <code id="copy-code" class="hero-code__text" title="Copy code">docker pull qdrant/qdrant;
+docker run -p 6333:6333 qdrant/qdrant</code>
                   <span class="hero-code__logo">
                     <i class="fab fa-docker"></i>
                   </span>
