--- a/qdrant-landing/themes/qdrant/layouts/index.html
+++ b/qdrant-landing/themes/qdrant/layouts/index.html
@@ -14,9 +14,9 @@
               <h4 class="d-inline-block mb-3">Build your own exclusive AI products.</h4><br>
 
 
-                <div class="hero-code mt-3 mb-4 copy-btn" id="copy-popover" data-toggle="popover" data-content="Text copied!" data-clipboard-target="#copy-code">
+                <div class="hero-code mt-3 mb-4">
                   <!-- Don't change an alignment inside this code tag-->
-                  <code id="copy-code" class="hero-code__text" title="Copy code">docker pull qdrant/qdrant;
+                  <code class="hero-code__text">docker pull qdrant/qdrant
 docker run -p 6333:6333 qdrant/qdrant</code>
                   <span class="hero-code__logo">
                     <i class="fab fa-docker"></i>
