--- a/qdrant-landing/themes/qdrant/static/css/blocks/hero-code.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/hero-code.scss
@@ -2,7 +2,7 @@
 
 /* #bem */
 
-@import url("../colors.css");
+@import url("colors.css");
 .hero-code {
 	display: inline-block;
 	padding: 1rem 3rem 1rem 1.6rem;
