--- a/qdrant-landing/themes/qdrant/static/css/main.css
+++ b/qdrant-landing/themes/qdrant/static/css/main.css
@@ -49,7 +49,7 @@
 @import url("flaticon.css");
 @import url("custom-animate.css");
 @import url("colors.css");
-@import url("../colors.css");
+@import url("colors.css");
 :root {
   --blue: #007bff;
   --indigo: #6610f2;
