changed size and positioning of the docker icon, added a link to dockerhub, some styles for mobiles

--- a/qdrant-landing/themes/qdrant/layouts/index.html
+++ b/qdrant-landing/themes/qdrant/layouts/index.html
@@ -13,14 +13,13 @@
               <h1>Neural Search Engine</h1>
               <h4 class="d-inline-block mb-3">Build your own exclusive AI products.</h4><br>
 
-
                 <div class="hero-code mt-3 mb-4">
                   <!-- Don't change an alignment inside this code tag-->
                   <code class="hero-code__text">docker pull qdrant/qdrant
 docker run -p 6333:6333 qdrant/qdrant</code>
-                  <span class="hero-code__logo">
+                  <a class="hero-code__logo" href="https://hub.docker.com/r/qdrant/qdrant/" target="_blank">
                     <i class="fab fa-docker"></i>
-                  </span>
+                  </a>
                 </div> <br>
 
               <div class="sec-title text">Take a look at our <a target="_blank" href="{{ .Site.Params.quick_start }}">Quick Start Guide</a>
