hid an installation section and an imapge on hero-banner for small mobile devices

--- a/qdrant-landing/themes/qdrant/layouts/index.html
+++ b/qdrant-landing/themes/qdrant/layouts/index.html
@@ -11,7 +11,7 @@
           <div class="content-column col-lg-6 col-md-12 col-sm-12">
             <div class="inner-column">
               <h1>Neural Search Engine</h1>
-              <h4 class="d-inline-block mb-3">Build your own exclusive AI products.</h4><br>
+              <h4 class="d-inline-block mb-sm-3">Build your own exclusive AI products.</h4><br>
 
                 <div class="hero-code mt-3 mb-4">
                   <!-- Don't change an alignment inside this code tag-->
