--- a/qdrant-landing/themes/qdrant/layouts/articles/single.html
+++ b/qdrant-landing/themes/qdrant/layouts/articles/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<div class="auto-container pt-5 single-page">
+<div class="auto-container pt-3 pt-md-5 single-page">
     <div class="row clearfix">
         <!-- Content Side -->
         <section class="content-side col-lg-12 col-md-12 col-sm-12">
