--- a/qdrant-landing/themes/qdrant/layouts/blog/single.html
+++ b/qdrant-landing/themes/qdrant/layouts/blog/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<section class="auto-container pt-5 single-page">
+<section class="auto-container pt-3 pt-md-5 single-page">
     <div class="row clearfix">
 
         <!-- Sidebar Side -->
