--- a/qdrant-landing/themes/qdrant/layouts/partials/blog-sidebar.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/blog-sidebar.html
@@ -1,5 +1,5 @@
 <!-- Sidebar Side -->
-<div class="sidebar-side col-lg-4 col-md-12 col-sm-12">
+<div class="sidebar-side col-lg-4 col-md-12 col-sm-12 order-1 order-md-0 mb-5 mb-md-0">
     <aside class="sidebar sticky-top">
 
         {{ range where (where .Pages "Section" "blog") ".Params.featured" "=" true }}
