--- a/qdrant-landing/themes/qdrant/layouts/partials/sidebar-list.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/sidebar-list.html
@@ -1,4 +1,4 @@
-<section class="auto-container pt-5">
+<section class="auto-container pt-3 t-md-5">
     <div class="row clearfix">
 
         <!-- Sidebar Page Container -->
