--- a/qdrant-landing/themes/qdrant/layouts/use-cases/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/use-cases/list.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 
 <section>
-    <div class="auto-container pt-5">
+    <div class="auto-container pt-4 pt-md-5">
         <div class="row clearfix">
 
             <div class="col-12 sec-title text-center">
