--- a/qdrant-landing/themes/qdrant/layouts/articles/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/articles/list.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 
 <section>
-    <div class="auto-container pt-3 pt-md-4">
+    <div class="auto-container pt-3 pt-md-5">
         <div class="row clearfix">
 
             {{ if .Params.description }}
@@ -19,9 +19,9 @@
 
             {{ if .Params.short_description }}
 
-            <div class="col-lg-4 col-md-6 col-sm-12">
+            <div class="col-lg-4 col-md-6 col-sm-12 d-flex">
                 <!-- News block Two -->
-                <div class="news-block-two">
+                <div class="news-block-two d-flex">
                     <div class="inner-box">
                         <div class="image">
                             <a href="{{ $link }}" data-caption="{{ .Title }}"><img src="{{ .Params.preview_image }}" alt="" /></a>
