demo page with placeholder content

--- a/qdrant-landing/themes/qdrant/static/css/main.css
+++ b/qdrant-landing/themes/qdrant/static/css/main.css
@@ -14070,7 +14070,7 @@ img {
 .api-section {
   position: relative;
   overflow: hidden;
-  padding: 95px 0px 70px;
+  padding: 0;
 }
 
 .api-section .pattern-layer {
