--- a/qdrant-landing/themes/qdrant/static/css/main.scss
+++ b/qdrant-landing/themes/qdrant/static/css/main.scss
@@ -3087,7 +3087,7 @@ img{
 .api-section{
 	position:relative;
 	overflow:hidden;
-	padding:95px 0px 70px;
+	padding: 0;
 }
 
 .api-section .pattern-layer{
