added link on the cloud page to main menu

--- a/qdrant-landing/themes/qdrant/layouts/cloud/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/cloud/list.html
@@ -75,8 +75,8 @@
 <!-- End Pricing Page Section -->
 
 <!-- Call To Action Section -->
-<section class="call-to-action-section" data-spy="scroll" data-target="#price-offers" data-offset="0">
-    <div class="auto-container">
+<section class="call-to-action-section" data-spy="scroll" data-target="#price-offers">
+    <div class="auto-container" id="request-form">
         <div class="inner-container">
             <div class="row clearfix">
 
@@ -97,7 +97,7 @@
                 <div class="email-column col-lg-5 col-sm-12 col-sm-12">
                     <div class="inner-column">
                         <!-- Newsletter Form -->
-                        <div class="newsletter-form" id="request-form">
+                        <div class="newsletter-form">
                             <form method="post" action="contact.html">
                                 <div class="form-group">
                                     <input type="email" name="email" value="" placeholder="Enter Your Email"
