added a link on the new page to the main menu

--- a/qdrant-landing/themes/qdrant/layouts/demo/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/demo/list.html
@@ -16,7 +16,7 @@
                         <h2>{{ $p.Title }}</h2>
                         <div class="text">{{ $p.Description }}</div>
                     </div>
-                    <a href="{{ $p.Params.link }}" class="theme-btn btn-style-four"><span class="txt">Live Demo</span></a>
+                    <a class="theme-btn btn-style-four" href="{{ $p.Params.link }}" target="_blank"><span class="txt">Live Demo</span></a>
                 </div>
             </div>
 
